// Vitest Snapshot v1

exports[`<Alert /> > should render when [color=%p] blue 1`] = `
<_Alert
  className="sc-eDvSVe"
  color="blue"
/>
`;

exports[`<Alert /> > should render when [color=%p] green 1`] = `
<_Alert
  className="sc-eDvSVe"
  color="green"
/>
`;

exports[`<Alert /> > should render when [color=%p] red 1`] = `
<_Alert
  className="sc-eDvSVe"
  color="red"
/>
`;
